--- a/packages/typescrit-config/package.json
+++ b/packages/typescrit-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescrit-eslint-config",
+  "name": "@leo-tools/typescrit-eslint-config",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "tc9011",
