--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ts",
     "react"
   ],
-  "engines": { "node": "^14.15.0 || >=16.0.0" },
+  "engines": {
+    "node": "^14.15.0 || >=16.0.0"
+  },
   "devDependencies": {
     "lerna": "^5.1.4"
   }
