--- a/packages/typescript-eslint-config/package.json
+++ b/packages/typescript-eslint-config/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npm.taobao.org"
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,6 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0"
-  }
+  },
+  "gitHead": "c1327ca04e7d1117a0b08301daee454cd7b3c21b"
 }
