--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0"
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "peerDependencies": {
+    "eslint-plugin-import": "^2.26.0",
     "@typescript-eslint/eslint-plugin": ">= 5",
     "eslint": ">= 8"
   },
