--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "main": "index.js",
   "directories": {
-    "test": "__tests__"
+    "test": "__tests__",
+    "rules": "rules"
   },
   "files": [
-    "./"
+    "./",
+    "rules"
   ],
   "publishConfig": {
     "access": "public",
