--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -31,12 +31,12 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.22.1"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": ">= 5",
     "eslint": ">= 8",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "@^2.22.1"
   },
   "gitHead": "1b96a24026fd27e34f1ffe574d6160864f9def1e"
 }
