--- a/packages/eslint-config-base/package.json
+++ b/packages/eslint-config-base/package.json
@@ -32,6 +32,7 @@
     "url": "https://github.com/leo-tools/eslint-configs/issues"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "confusing-browser-globals": "^1.0.11",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-plugin-import": "^2.26.0"
