--- a/packages/eslint-config-react-typescript/package.json
+++ b/packages/eslint-config-react-typescript/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@leo-tools/eslint-config-typescript": "^0.0.20",
+    "@leo-tools/eslint-config-react": "^0.0.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
